# Automation-test-Marine-Data-Store

./: .env.template  .gitignore  404.html  Add_data_in_database.py  Makefile  Set_environment_variables.py  Test_downloading_datasets.py  check_if_download_errors.py  create_database_table.py  date_handling.py  email_sending.py  extract_datasets_from_describe.py  get_list_last_dates_available.py  index.html  mkdocs.yml  pyproject.toml  readme  readme.md  requirements.txt  retrieve_from_describe_test_availability_and_push_in_db.py  script_get_testing.py  search.html  treating_output.py  utils_download.py
.github/workflows/: add_process.yml  deploy_database.yml  deploy_tests.yml  lint.yml  start_process.yml  tests.yml
Testing/: Treating_outputs.py  testing_datasets_availability_via_subset.py
data/.ipynb_checkpoints/: test.nc_(65)-checkpoint.csv
database_management/: create_database_table.py
database_management/.ipynb_checkpoints/: create_database_table-checkpoint.py
database_schema/: index.html
deploy/: __init__.py  auth.py  authentificator.py  client.py  urls.py  utils.py
deploy/database/: create_database_table.py  postgres_payload.json  start_postgres_database.py
deploy/process/: Dockerfile  add_process.py  add_process_payload.json5  start_process.py  start_process_payload.json5
docs/: database_schema.md  further_development.md  index.md  usage.md
further_development/: index.html
generated_table/: index.html
last_dates_available/: get_list_last_dates_available.py
notebooks/: test_available_omi_files_via_get(1).ipynb
search/: search_index.json
src/: Dockerfile
src/data/: datasets_not_downloaded.csv  downloaded_datasets.csv  downloaded_datasets_reduced.csv  get_products_downloaded.csv  get_products_dry_run.csv  list_of_informations_from_the_describe.csv
src/scripts/: Test_downloading_datasets.py  check_if_download_errors.py  email_sending.py  retrieve_from_describe_test_availability_and_push_in_db.py  script_get_testing.py  set_up_database.py  treating_output.py
src/test_availability_data/: Add_data_in_database.py  check_if_download_errors.py  downloading_datasets.py  email_sending.py  environment_variables.py  extract_datasets_from_describe.py  main.py  obtaining_environment_versions.py  script_get_testing.py  script_to_markdown.py  toolbox_wrapper.py  treating_output.py
src/test_availability_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/test_availability_data/.ipynb_checkpoints/: Add_data_in_database-checkpoint.py  check_if_download_errors-checkpoint.py  downloading_datasets-checkpoint.py  extract_datasets_from_describe-checkpoint.py
src/test_availability_data/config/: __init__.py  logger.py  region_config.py
src/test_availability_data/database/: __init__.py  add_data.py  set_up_database.py
src/test_availability_data/database_management/: Add_data_in_database.py  add_data.py  create_database_table.py  schemas.py
test_availability_data/: downloading_datasets.py  extract_datasets_from_describe.py
tests/: conftest.py  test_add_data.py  test_deploy.py  test_downloading_datasets.py
usage/: index.html
utils/: download.py  general.py  region_config.py
utils/.ipynb_checkpoints/: download-checkpoint.py  general-checkpoint.py
(+19 files in other folders)
