[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "test_availability_data"
version = "0.1.1"
description = "Script for testing availability of data of the Marine data store via the toolbox"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Guillaume Koenig", email = "gkoenig@mercator-ocean.fr"}
]
dependencies = [
  "copernicusmarine==2.3.0b0",
  "pandas>=2.0,<3",
  "numpy>=1.23,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg2-binary>=2.9,<3",
  "dotenv==0.9.9",
  "zarr>=3.0.1",
  "tabulate>=0.9,<1",
  "distro==1.9.0",
  "mkdocs==1.6.1",
  "xarray>2024.9.0"
  ]

[project.optional-dependencies]
dev = ["mkdocs"]
