[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "test_availability_data"
version = "1.0.0"
description = "Script for testing availability of data of the Marine data store via the toolbox"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
  {name = "Guillaume Koenig", email = "gkoenig@mercator-ocean.fr"}
]

[project.scripts]
cataloguechecks = "test_availability_data.scripts.retrieve_from_describe_test_availability_and_push_in_db:main"


[tool.poetry]
packages = [{include = "test_availability_data", from = "src"}]

[tool.poetry.dependencies]
copernicusmarine = "==2.3.0"
pandas = "==2.3.3"
numpy = "==2.4.2"
sqlalchemy = "==2.0.46"
psycopg2-binary = "2.9.12"
zarr = "==3.1.5"
tabulate = "==0.9"
distro = "==1.9.0"
xarray = "==2026.1.0"
python-dotenv = "^1.2.2"
h5py = "3.16.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "==1.6.1"
responses = ">=0.25.0"
pytest = "^9.0.3"
ruff = "^0.11.0"
pyright = "^1.1.0"
pandas-stubs = "^3.0.0.260204"

[tool.poetry.group.deploy.dependencies]
requests = "^2.32.5"
json5 = "^0.13.0"
responses ="^0.26.0"
dotenv = "^0.9.9"

[tool.ruff.lint]
select = ["E", "F", "I"]



